<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp">

    <TextView
        android:id="@+id/textView63"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/cambo"
        android:text="@string/nuevoProducto"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/cambo"
            android:paddingEnd="5dp"
            android:text="@string/producto"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/iNewProducto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/input"
            android:ems="10"
            android:inputType="textPersonName"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="0"
            android:fontFamily="@font/cambo"
            android:text="@string/area"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <CheckBox
            android:id="@+id/selectBarra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/barra" />

        <CheckBox
            android:id="@+id/selectCocina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cocina" />

        <CheckBox
            android:id="@+id/selectCocinaCH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cocinaCh" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv37"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cambo"
        android:text="@string/descripcion"
        android:textColor="@color/black"
        android:textSize="16dp" />

    <EditText
        android:id="@+id/idescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:lines="2"
        android:paddingStart="5dp"
        android:paddingTop="3dp"
        android:paddingEnd="5dp"
        android:paddingBottom="3dp"
        android:textColor="@color/black"
        android:textSize="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv38"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/cambo"
            android:text="@string/cantidad"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <Button
            android:id="@+id/bdecrement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/decrementar" />

        <TextView
            android:id="@+id/sCant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/cambo"
            android:text="@string/uno"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bincrement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/incrementar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView39"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/cambo"
            android:paddingEnd="5dp"
            android:text="@string/precio"
            android:textColor="@color/black"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/iPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/input"
            android:ems="10"
            android:inputType="numberDecimal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="16dp" />
    </LinearLayout>

    <Button
        android:id="@+id/bAgregarNuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/agregar" />

</LinearLayout>