<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".encargado.CortesOpcionesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView88"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/verde"
            android:fontFamily="@font/cambo"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/cortes"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCorteDiario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/disponible"
            android:fontFamily="@font/cambo"
            android:text="@string/Diario"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCorteMensual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/disponible"
            android:fontFamily="@font/cambo"
            android:text="@string/Mensual"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnCorteAnual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:backgroundTint="@color/disponible"
            android:fontFamily="@font/cambo"
            android:text="@string/Anual"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</FrameLayout>