<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleCuentaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMesa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/azul"
            android:fontFamily="@font/cambo"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/azul"
            android:fontFamily="@font/cambo"
            android:paddingBottom="5dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnAddFaltantes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/addPlatillosOlvidados"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnAddOrden"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/nuevaOrden"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btnVisualizarCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/fui_transparent"
                android:fontFamily="@font/cambo"
                android:text="@string/verDetalles"
                android:textColor="@color/azul"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tituloCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/productos"
                android:fontFamily="@font/cambo"
                android:padding="4dp"
                android:text="@string/cuenta"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone" />

            <GridView
                android:id="@+id/contenedorProductosCliente"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/tvTotalCuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cambo"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="TextView"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>

        <Button
            android:id="@+id/btnImprimirCuenta"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/imprimir" />

        <Button
            android:id="@+id/btnEliminarCuenta"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pagar" />

        <Button
            android:id="@+id/btnRemoveCuenta"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/rojo"
            android:text="@string/removeCuenta" />
    </LinearLayout>
</FrameLayout>