<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigurarMesaFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMesaTitleConfiguracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/azul"
            android:fontFamily="@font/cambo"
            android:padding="10dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView38"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cambo"
                android:text="@string/nombre"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNombreCliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/input"
                android:ems="10"
                android:inputType="text"
                android:paddingStart="5dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnActivarMesa"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/activar" />

        <Button
            android:id="@+id/btnReservarMesa"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/reservar" />

        <Button
            android:id="@+id/btnCancelarReservacion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/rojo"
            android:text="@string/cancelarReservacion"
            android:visibility="gone" />

    </LinearLayout>

</FrameLayout>