<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".encargado.FragmentEditarMesa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMesaTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/azul"
            android:fontFamily="@font/cambo"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <TextView
                android:id="@+id/textView35"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cambo"
                android:text="@string/numComensales"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etChangeCupo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input"
                android:ems="10"
                android:inputType="number"
                android:paddingStart="5dp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnActualizarMesa"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/actualizar" />

        <Button
            android:id="@+id/btnDesactivar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/desactivar" />

        <Button
            android:id="@+id/btnEliminarMesa"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/rojo"
            android:text="@string/eliminar" />
    </LinearLayout>
</FrameLayout>